--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="Juanitto"
+        android:text="Nacho"
         android:textColor="@color/white"
         android:background="@color/LightCoral"
         android:gravity="center_horizontal" />
