--- a/app/src/main/res/layout/fragment_cluster.xml
+++ b/app/src/main/res/layout/fragment_cluster.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="Dresden"
+        android:text="Dresden Walking Tour"
         android:textColor="@color/white"
         android:background="@color/Background"
         android:gravity="center_horizontal" />
